--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,11 @@
-Release 0.1.0a
+Release 0.1.0a1
 * Initial Release
+
+Release 0.1.0a2
+* Added:
+  - [UI] (#3) Internal settings are now being saved at exit
+* Fixed:
+  - [Library] (#1) "[Peer]" sections in config file had heading "[Interface]"
+  - [Library] (#2) Only one IP network was added to the config file in dual-stack configurations
+  - [Library] (#4) The psk of the main peer in the config files of the non-main-peers was wrong
+* Hint: this version supports the creation of a server-client-configuration
