Add general connection scenarios (closes #5) (closes #8)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Release 0.1.0a1
 * Initial Release
+* Hints
+  - this version only supports the creation of a roadwarrior-configuration
+  - interface is not stable and can change drastically in future versions
 
 Release 0.1.0a2
 * Added:
@@ -8,4 +11,18 @@ Release 0.1.0a2
   - [Library] (#1) "[Peer]" sections in config file had heading "[Interface]"
   - [Library] (#2) Only one IP network was added to the config file in dual-stack configurations
   - [Library] (#4) The psk of the main peer in the config files of the non-main-peers was wrong
-* Hint: this version supports the creation of a server-client-configuration
+* Hints
+  - this version only supports the creation of a roadwarrior-configuration
+  - interface is not stable and can change drastically in future versions
+
+Release 0.1.0a3
+* Added:
+  - [Library] [UI] (#5) Allow any peer to connect to multiple endpoints
+  - [Library] [UI] (#8) Add connection matrix
+* Fixed:
+  - [UI] Setting "verbosity" is now used at all
+* Changed:
+  - [UI] Existing site and peer names are shown more frequently (if it makes sense)
+  - Clarification of some variable names and descriptions
+* Hints:
+  - interface is not stable and can change drastically in future versions
