--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,9 +23,18 @@ Release 0.1.0a3
   - [Library] (#12) Add data integrity check of json files at startup
   - [UI] (#8) Add connection matrix
 * Fixed:
-  - [UI] Setting "verbosity" is now used at all
+  - [UI] Setting "verbosity" was not used
 * Changed:
-  - [UI] Existing site and peer names are shown more frequently (if it makes sense)
+  - [UI] Existing site and peer names are shown more frequently (where it makes sense)
   - Clarification of some variable names and descriptions
 * Known bugs and limitations:
-  - interface is not stable and can change drastically in future versions
+  - interface is not stable and can change drastically in future releases
+
+Release 0.1.0a4
+* Fixed:
+  - Creation of a new site was impossible
+  - Integrity check of sites failed (integrity check looked for key "version" instead of "config_version")
+  - Integrity check was unaware of values with multiple allowed datatypes (e.g. "NoneType" and "bool")
+  - Recreation of the keys for a peer removed all other attributes from this peer
+* Known bugs and limitations:
+  - interface is not stable and can change drastically in future releases
