First prototype for startup messages

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -98,6 +98,6 @@ Release 0.1.0b3
 * Fixed:
   - [UI] Version string is now displayed correctly ("0.1.0b" instead of "0.1.0a")
 * Changed:
-  -
+  - More readable error messages if there is an error in one of the JSON files
 * Known bugs and limitations:
-  -
+  - Interface is not stable and can change drastically in future releases
