--- a/CHANGELOG
+++ b/CHANGELOG
@@ -107,7 +107,7 @@ Release 0.1.0b4
   - [UI] Add support for multiple languages (at the moment "en" and "de")
   - [UI] [Library] Add key_presence and key_datatype startup messages
 * Fixed:
-  -
+  - [Library] Fix use of wrong encoding during file read
 * Changed:
   -
 * Known bugs and limitations:
