[UI] Fix menu navigation if no site/peer is created

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -110,6 +110,7 @@ Release 0.1.0b4
 * Fixed:
   - [Library] Fix use of wrong encoding during file read
   - [Library] Fix wrong submission of key that is checked in key_datatype
+  - [UI] Menu navigation if no site/peer is created is now possible
 * Changed:
   -
 * Known bugs and limitations:
