Update version string for next release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -115,3 +115,13 @@ Release 0.1.0b4
   -
 * Known bugs and limitations:
   - Interface is not stable and can change drastically in future releases
+
+Release 0.1.0b5
+* Added:
+  -
+* Fixed:
+  -
+* Changed:
+  -
+* Known bugs and limitations:
+  -
